# spoj-practice-algorithms

./: .gitignore  CMakeLists.txt  README.md  SpojPracticeAlgorithms.h  main.cpp
List problems/: Adding Reversed Numbers.cpp  Character Patterns (Act 1).cpp  Half of the half.cpp
